<resources>
    <string name="app_name">MAG</string>
    <string name="bascket">سبدخرید</string>
    <string name="home">خانه</string>
    <string name="mymag">مگ من</string>
    <string name="category"> دسته بندی ها</string>
    <string name="add_to_bascket">افزودن به سبد خرید</string>
    <string name="unit_of_currency">تومان</string>
    <string name="product_feature">ویژگی های محصول</string>
    <string name="show_all">مشاهده همه</string>
    <string name="mymarket">مگ مارکت</string>
    <string name="searching">جستجو در</string>
    <string name="product">کالا</string>
    <string name="users_commnet">دیدگاه کاربران</string>
    <string name="nothing">هیچکدام</string>
    <string name="threehours">هر 3 ساعت</string>
    <string name="fivehours">هر 5 ساعت</string>
    <string name="eighthours">هر 8 ساعت</string>
    <string name="twelvehours">  هر 12 ساعت</string>
    <string name="custom">انتخاب زمان دلخواه</string>
    <string name="setting_notification">تنظیمات اعلان ها</string>
    <string name="submit">ثبت</string>
    <string name="describe_your_comment">دیدگاه خود را شرح دهید</string>
    <string name="your_comment">دیدگاه شما</string>
    <string name="submit_comment">ثبت دیدگاه</string>
    <string name="comment_text">متن نظر</string>
    <string name="product_price">قیمت کالاها</string>
    <string name="digital">کالای دیجیتال</string>
    <string name="fashion">مد و پوشاک</string>
    <string name="supermarket">کالاهای سوپرمارکتی</string>
    <string name="art">کتاب،لوازم تحریر و هنر</string>
    <string name="poster">پوستر</string>
    <string name="similar_product">کالاهای مشابه</string>
    <string name="productimage">عکس محصول</string>
    <string name="free_delivery">ارسال رایگان</string>
    <string name="light">Light</string>
    <string name="back_to_home">بازگشت به صفحه اصلی</string>
    <string name="dark">Dark</string>
    <string name="placed_order">سفارش شما با موفقیت ثبت گردید.</string>
    <string name="order_number">شماره سفارش :</string>
    <string name="off">تومان تخفیف</string>
    <string name="products_off"> تخفیف کالاها </string>
    <string name="searching_on_all">جستجو در همه کالاها</string>
    <string name="existing">موجود در انبار مگ مارکت</string>
    <string name="magdelivery">ارسال مگ مارکت</string>
    <string name="storage">مگ مارکت</string>
    <string name="continue_shopping">ادامه فرایند خرید</string>
    <string name="warranty">گارانتی اصالت و سلامت کالا</string>
    <string name="tryagain">TRY AGAIN</string>
    <string name="free_desc">برای سفارش بالای 500 هزارتومان</string>
    <string name="close">بستن صفحه</string>
    <string name="show_more_option">ویژگی های بیشتر</string>
    <string name="favorite">موردعلاقه</string>
    <string name="email">ایمیل</string>
    <string name="password">پسورد</string>
    <string name="log_in">ورود</string>
    <string name="postcode">کدپستی</string>
    <string name="address">ادرس</string>
    <string name="phonenumber">شماره تماس</string>
    <string name="submitinfo">ثبت اطلاعات</string>
    <string name="successregister">ثبت نام با موفقیت انجام شد.</string>
    <string name="userid">ایدی شما:</string>
    <string name="existemail"> این ایمیل قبلا ثبت شده است </string>
    <string name="yourpass">پسورد شما :</string>
    <string name="city">شهر:</string>
    <string name="edit">اطلاعات شما با موفقیت ثبت شد.</string>
    <string name="choosereciver">اطلاعات گیرنده : </string>
    <string name="reciver">گیرنده: </string>
    <string name="reciveraddress">آدرس گیرنده:</string>
    <string name="reciverphonenumber">شماره تماس گیرنده:</string>
    <string name="country">کشور:</string>
    <string name="finalize_order"> ثبت نهایی </string>
    <string name="back">بازگشت</string>
    <string name="go_to_account">رفتن به حساب کاربری</string>
    <string name="go_to_account_and_edit">اطلاعات خود را تکمیل کنید </string>
    <string name="notLogin">شما وارد حساب کاربری خود نشده اید</string>
    <string name="register">ثبت نام در مگ مارکت</string>
    <string name="name">نام</string>
    <string name="complete_address">تکمیل و ویرایش اطلاعات</string>
    <string name="familyname">نام خانوادگی</string>
    <string name="total">جمع سبد خرید</string>
    <string name="summary">خلاصه سبد خرید</string>
    <string name="cart_desc">کالاهای موجود در سبد شما ثبت و رزرو نشده اند، برای ثبت سفارش مراحل بعدی را تکمیل کنید.</string>
    <string name="connection_describtion">You are not connected to the internet.
Make sure Wi-Fi is on,Airplane Mode is off and try again</string>
    <string name="connection">
        No Internet Connection
    </string>
    <string name="submit_your_comment_about_this_product">دیدگاه خود را درباره این کالا بنویسید</string>
    <string name="coupon_code">کد تخفیف</string>
    <string name="coupon_count">میزان تخفیف</string>
    <string name="percent">درصد</string>
    <string name="add_coupon_cart">افزودن کد تخفیف</string>
    <string name="totalwithcoupon">جمع سبد خرید با تخفیف</string>
    <string name="accept_coupon">کد تخفیف شما با موفقیت افزوده شد</string>
    <string name="ignore_coupon">کد تخفیف وارد شده درست نیست یا قبلا استفاده شده است.</string>
    <string name="price_desc">قیمت از زیاد به کم</string>
    <string name="price_asc">قیمت از کم به زیاد</string>
    <string name="most_visiting">پربازدیدترین‌ها</string>
    <string name="most_rating">پرامتیازترین‌ها</string>
    <string name="most_newest">جدیدترین‌ها</string>
    <string name="sort">مرتب سازی</string>
    <string name="filter">فیلتر</string>
    <string name="focous">focous</string>
</resources>