<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/price_desc"
        android:title="@string/price_desc"
        app:showAsAction="never"/>
    <item
        android:id="@+id/price_asc"
        android:title="@string/price_asc"
        app:showAsAction="never"/>
    <item
        android:id="@+id/most_newest"
        android:title="@string/most_newest"
        app:showAsAction="never"/>
    <item
        android:id="@+id/most_rating"
        android:title="@string/most_rating"
        app:showAsAction="never"/>
    <item
        android:id="@+id/most_visiting"
        android:title="@string/most_visiting"
        app:showAsAction="never"/>
</menu>