<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="38dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/setting_notification"
        android:textColor="@color/text"
        android:textSize="@dimen/TextSize6x"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_back" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standardMargin5x"
        app:cardCornerRadius="@dimen/standardMargin5x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="@dimen/standardMargin5x"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/notif_rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="right">

                <RadioButton
                    android:id="@+id/off_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginBottom="@dimen/standardMargin3x"
                    android:fontFamily="@font/far_mitra"
                    android:layoutDirection="rtl"
                    android:text="@string/nothing"
                    android:textSize="@dimen/TextSize4x" />


                <RadioButton
                    android:id="@+id/three_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standardMargin3x"
                    android:fontFamily="@font/far_mitra"
                    android:layoutDirection="rtl"
                    android:minHeight="48dp"
                    android:text="@string/threehours"
                    android:textSize="@dimen/TextSize4x" />

                <RadioButton
                    android:id="@+id/five_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standardMargin3x"
                    android:fontFamily="@font/far_mitra"
                    android:layoutDirection="rtl"
                    android:minHeight="48dp"
                    android:text="@string/fivehours"
                    android:textSize="@dimen/TextSize4x" />

                <RadioButton
                    android:id="@+id/eight_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standardMargin3x"
                    android:fontFamily="@font/far_mitra"
                    android:layoutDirection="rtl"
                    android:minHeight="48dp"
                    android:text="@string/eighthours"
                    android:textSize="@dimen/TextSize4x" />

                <RadioButton
                    android:id="@+id/twelve_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standardMargin3x"
                    android:fontFamily="@font/far_mitra"
                    android:layoutDirection="rtl"
                    android:minHeight="48dp"
                    android:text="@string/twelvehours"
                    android:textSize="@dimen/TextSize4x" />

                <RadioButton
                    android:id="@+id/custom_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standardMargin3x"
                    android:fontFamily="@font/far_mitra"
                    android:layoutDirection="rtl"
                    android:minHeight="48dp"
                    android:text="@string/custom"
                    android:textSize="@dimen/TextSize4x" />
            </RadioGroup>

            <EditText
                android:id="@+id/ed_custom_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardMargin3x"
                android:hint="@string/custom"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/text"
                android:textDirection="rtl"
                android:textSize="@dimen/TextSize3x" />

            <Button
                android:id="@+id/submit_notifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardMargin3x"
                android:layout_marginBottom="@dimen/standardMargin3x"
                android:background="@drawable/enable_btn"
                android:fontFamily="@font/far_mitra"
                android:text="@string/submit"
                android:textColor="@color/red"
                android:textSize="@dimen/TextSize4x" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>